# SimpleRenderEngine

./: CMakeLists.txt
Exercise10/Engine/Engine/Components/: ComponentRendererSprite.cpp  ComponentRendererSprite.h
Exercise10/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentPlatform.cpp  ComponentPlatformMove.cpp  ComponentPlatformMove.h  ComponentSpline.cpp  ComponentSpline.h
Exercise10/ExampleGame/data/: scene.json
Exercise4/: temp.cpp
Exercise4/Engine/Engine/: GameObject.h  MyEngine.cpp  MyEngine.h
Exercise4/ExampleGame/: CMakeLists.txt  main.cpp
Exercise4/ExampleGame/Game/: AsteroidController.cpp  AsteroidController.h  ComponentController.cpp  ComponentController.h  General.cpp  General.h  LaserController.cpp  LaserController.h  PlayerController.cpp  PlayerController.h
Exercise4/data/: asteroids.json
Exercise6/Engine/: CMakeLists.txt
Exercise6/Engine/Engine/: MyEngine.cpp  MyEngine.h
Exercise6/ExampleGame/: CMakeLists.txt  main.cpp
Exercise6/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentRendererMesh.cpp  LevelLayout.cpp  LevelLayout.h
Exercise6/ExampleGame/data/: scene.json
Exercise8/Engine/Engine/: ComponentList.h  MyEngine.cpp  MyEngine.h
Exercise8/Engine/Engine/Components/: ComponentPhysicsBody.cpp  (+1 more)
Exercise8/ExampleGame/: main.cpp
Exercise8/ExampleGame/Game/: ComponentBackground.cpp  ComponentBackground.h  ComponentController.cpp  ComponentController.h  ComponentSpawner.cpp  ComponentSpawner.h
Exercise8/ExampleGame/data/: scene.json
project/: box2d-example.cpp
(+2 files in other folders)
